# Practicing-Python

./: .env  .gitignore  pyproject.toml  quiz.py  shopping_cart.py
app/: .env.example  .gitignore  config.py  main.py  utils.py
app/api/: dependencies.py  router.py
app/api/routers/: seller.py  shipment.py
app/api/schemas/: seller.py  shipment.py
app/database/: models.py  session.py
app/services/: seller.py  shipment.py
practice/: function.py  shopping_cart.py
practice/Authentication/: hashing.py
practice/function/: pattern.py
practice/python/asyncio/: async.py
practice/python/basics/: abstraction.py  class_object.py  classmethod.py  encapsulation.py  inheritance.py  output.txt  overloading_overiding.py  polymorphism.py  print.txt  read_write.py  static_methods.py  super.py  try_catch.py
practice/python/class_object/: class.py  inheritance.py
practice/python/dict_tuples/: problem1.py  problem2.py  problem3.py
practice/python/exception-handling/: read.py  reading_file.py
practice/python/file-handling/: question1.py
