[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.2",
    "passlib[bcrypt]==1.7.4",
    "ptpython>=3.0.32",
    "pydantic-settings>=2.13.1",
    "scalar-fastapi>=1.8.1",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]
